--- a/pages/orders.html
+++ b/pages/orders.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ez egy szuper oldal</title>
+    <title>Document</title>
 </head>
 <body>
     <ul>
@@ -17,17 +17,10 @@
             <a href="/pages/orders.html">Orders</a>
         </li>
         <li>
-            <a href="/about">About</a>
+            <a href="/about.html">About</a>
         </li>
     </ul>
-    <h1>
-        Fantastic Burgers
-    </h1>
-    <ul>
-        <li>Mexican</li>
-        <li>Extra</li>
-    </ul>
-
-    <img src="/img/burger.jpg" alt="">
+    <h1>Orders</h1>
+    <a href="/pages/products.html">Orders</a>
 </body>
 </html>
