--- a/pages/products.html
+++ b/pages/products.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ez egy szuper oldal</title>
+    <title>Document</title>
 </head>
 <body>
     <ul>
@@ -20,14 +20,6 @@
             <a href="/about">About</a>
         </li>
     </ul>
-    <h1>
-        Fantastic Burgers
-    </h1>
-    <ul>
-        <li>Mexican</li>
-        <li>Extra</li>
-    </ul>
-
-    <img src="/img/burger.jpg" alt="">
+    <h1>Products</h1>
 </body>
 </html>
